--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignorar diretórios e arquivos específicos
 static/
 media/
+project/local_settings.py
+*.ycm_extra_conf.py
 
 # Extras------------------------
 
