Configurando e organizando novas funcionalidades da Agenda.
Configurado o novo CSS.
Adicionado a lista de contatos na página principal.
Adicionaod a página refente a cada contato (vinculado ao ID).
Organizado e incluido as novas HTMLs do menu e da lista de contatos. Utilizando Django HTML.
Adicionado funcionaliade que, ao apagar um contato, excluir a sua picture se existir.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ static/
 media/
 project/local_settings.py
 *.ycm_extra_conf.py
+base_static/global/imagens
+base_static/global/style.css
 
 # Extras------------------------
 
