Novas funcionalidades e correções.
Limpeza e organização de alguns arquivos;
Novas configurações Visuais;
Adicionado e configurado Imagem para contato;
Nova funcionalidade de alterar dados dos contatos;
Nova funcionalidade de apagar contatos. Obs.: 1 de cada vez;

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ project/local_settings.py
 *.ycm_extra_conf.py
 base_static/global/imagens
 base_static/global/style.css
+*mudanças
 
 # Extras------------------------
 
